Refactor codex/moderate tests to achieve 100% branch coverage and remove test smells